<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

	<header
		android:id="@+id/pref_logout"
		android:key="@string/pref_header_logout"
		android:icon="@drawable/ic_power_settings_new_black_24dp"
		android:summary="@string/pref_header_logout_sum"
		android:title="@string/pref_header_logout"/>

	<header
		android:fragment="com.cesoft.encuentrame3.ActConfig$OpcionesPreferenceFragment"
		android:icon="@drawable/ic_sync_black_24dp"
		android:summary="@string/pref_header_opciones_sum"
		android:title="@string/pref_header_opciones"/>

	<header
		android:fragment="com.cesoft.encuentrame3.ActConfig$VoicePreferenceFragment"
		android:icon="@drawable/ic_mic_black_24dp"
		android:summary="@string/pref_header_voice_sum"
		android:title="@string/pref_header_voice"/>

	<header
		android:fragment="com.cesoft.encuentrame3.ActConfig$NotificationPreferenceFragment"
		android:icon="@drawable/ic_notifications_black_24dp"
		android:summary="@string/pref_header_notifications_sum"
		android:title="@string/pref_header_notifications"/>

	<header
		android:fragment="com.cesoft.encuentrame3.ActConfig$GeneralPreferenceFragment"
		android:icon="@drawable/ic_info_black_24dp"
		android:title="@string/pref_header_about"/>

</preference-headers>
