<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".ActRuta">
	<item
		android:id="@+id/menu_estadisticas"
		android:orderInCategory="100"
		android:title="@string/estadisticas"
		android:icon="@android:drawable/ic_menu_info_details"
		app:showAsAction="always">
	</item>
	<item
		android:id="@+id/menu_eliminar"
		android:orderInCategory="200"
		android:title="@string/eliminar"
		android:icon="@android:drawable/ic_menu_delete"
		app:showAsAction="always">
	</item>
	<item
		android:id="@+id/menu_guardar"
		android:orderInCategory="300"
		android:title="@string/guardar"
		android:icon="@android:drawable/ic_menu_save"
		app:showAsAction="always">
	</item>
</menu>