<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".ActLogin">

	<TextView
		android:id="@+id/lblTitulo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:text="@string/enter_lbl"
		android:paddingTop="@dimen/activity_vertical_margin"
		style="@android:style/TextAppearance.Large"/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/lblEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/lblTitulo">
		<EditText
			android:id="@+id/txtEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			android:autofillHints="email" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/lblPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/lblEmail">
		<EditText
			android:id="@+id/txtPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/clave"
			android:inputType="textPassword"
			android:maxLines="1"
			android:autofillHints="password" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/lblPassword2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/lblPassword">
		<EditText
			android:id="@+id/txtPassword2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/clave_confirmar"
			android:inputType="textPassword"
			android:autofillHints="password"
			android:maxLines="1"/>
	</com.google.android.material.textfield.TextInputLayout>

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/layBoton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/lblPassword2"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp">
		<Button
			android:id="@+id/btnSend"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/btnStyle"
			android:text="@string/login"/>
	</androidx.appcompat.widget.LinearLayoutCompat >

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/layBotonGoogle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layBoton"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="25dp">
		<com.google.android.gms.common.SignInButton
			android:id="@+id/btnGoogle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="visible"
			android:layout_gravity="center"/>
	</androidx.appcompat.widget.LinearLayoutCompat >

	<androidx.appcompat.widget.LinearLayoutCompat
		android:id="@+id/layPrivacyPolicy"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layBotonGoogle"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp">
		<Button
			android:id="@+id/btnPrivacyPolicy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/btnStyle"
			android:text="@string/privacy_policy"/>
	</androidx.appcompat.widget.LinearLayoutCompat >

</RelativeLayout>
