<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.cesoft.encuentrame.ActBuscar"
	tools:showIn="@layout/act_buscar">


	<Switch
		android:id="@+id/bActivo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:text="@string/activo"
		/>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtNombre_"
		android:layout_below="@+id/bActivo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true">
		<AutoCompleteTextView
			android:id="@+id/txtNombre"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:hint="@string/nombre"
			android:maxLines="1"
			android:singleLine="true"/>
	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:id="@+id/layRadio"
		android:layout_below="@+id/txtNombre_"
		android:orientation="horizontal"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/radio"/>
		<Spinner
			android:id="@+id/spnRadio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:prompt="@string/radio" />
	</LinearLayout>

	<fragment
		android:id="@+id/map"
		android:layout_below="@+id/layRadio"
		xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
		class="com.google.android.gms.maps.SupportMapFragment"
		android:layout_marginTop="5dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ActBuscar"
		/>

</RelativeLayout>
